// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components >> Select Box Given select box IS selected and has children Should render snapshot correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#67B6A8",
          "borderColor": "#00000000",
          "borderRadius": 8,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "padding": 8,
        },
        Array [
          Object {},
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "margin": 8,
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "display": "flex",
            },
          ]
        }
      >
        TEST CHILDREN
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "display": "flex",
            "flexWrap": "nowrap",
            "margin": 8,
            "width": "70%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIText-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
            },
          ]
        }
      >
        Test title
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIDisplay-Regular",
              "fontSize": 14,
              "lineHeight": 20,
              "marginTop": 8,
              "textAlign": "left",
            },
          ]
        }
      >
        Test sub text
      </Text>
    </View>
  </View>
</View>
`;

exports[`components >> Select Box Given select box IS selected and has no children Should render snapshot correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#67B6A8",
          "borderColor": "#00000000",
          "borderRadius": 8,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "padding": 8,
        },
        Array [
          Object {},
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "margin": 8,
          },
          Array [
            Object {},
          ],
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "display": "flex",
            "flexWrap": "nowrap",
            "margin": 8,
            "width": "70%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIText-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
            },
          ]
        }
      >
        Test title
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIDisplay-Regular",
              "fontSize": 14,
              "lineHeight": 20,
              "marginTop": 8,
              "textAlign": "left",
            },
          ]
        }
      >
        Test sub text
      </Text>
    </View>
  </View>
</View>
`;

exports[`components >> Select Box Given select box is NOT selected and has children Should render snapshot correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderColor": "#00000000",
          "borderRadius": 8,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "padding": 8,
        },
        Array [
          Object {},
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "margin": 8,
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "display": "flex",
            },
          ]
        }
      >
        TEST CHILDREN
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "display": "flex",
            "flexWrap": "nowrap",
            "margin": 8,
            "width": "70%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIText-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
            },
          ]
        }
      >
        Test title
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIDisplay-Regular",
              "fontSize": 14,
              "lineHeight": 20,
              "marginTop": 8,
              "textAlign": "left",
            },
          ]
        }
      >
        Test sub text
      </Text>
    </View>
  </View>
</View>
`;

exports[`components >> Select Box Given select box is NOT selected and has no children Should render snapshot correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderColor": "#00000000",
          "borderRadius": 8,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "padding": 8,
        },
        Array [
          Object {},
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "margin": 8,
          },
          Array [
            Object {},
          ],
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "display": "flex",
            "flexWrap": "nowrap",
            "margin": 8,
            "width": "70%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIText-Semibold",
              "fontSize": 16,
              "lineHeight": 24,
              "textAlign": "left",
            },
          ]
        }
      >
        Test title
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIDisplay-Regular",
              "fontSize": 14,
              "lineHeight": 20,
              "marginTop": 8,
              "textAlign": "left",
            },
          ]
        }
      >
        Test sub text
      </Text>
    </View>
  </View>
</View>
`;
